Fixes bug 56785.  303 HTTP response now handled.  r=gagan, sr=mscott